Project simple_bank {
  database_type: 'PostgreSQL'
  Note: '''
    # Simple Bank Database
  '''
}

Table users as U {
  username varchar  [primary key] 
  email varchar [unique, not null]
  full_name varchar [not null]
  hashed_password varchar [not null]
  password_changed_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
  created_at timestamp [default: `now()`]

  Indexes {
    email
  }
}

Table categories {
  id bigserial [primary key]
  name varchar unique [not null]

  Indexes {
    name
  }
}

Table transactions {
  id bigserial [primary key]
  username varchar [not null, ref: > users.username]
  category_id bigint [not null, ref: > categories.id]
  amount bigint [not null, note: 'can be positive or negative']
  description text 

  date timestamp [default: `now()`]
  created_at timestamp [default: `now()`]

  Indexes {
    username
    (username, date)
    (username, amount) 
    (username, amount, date)
  }
}

Table accounts as A {
  id bigserial [pk]
  owner varchar [ref: > U.username, not null]
  balance bigint [not null]
  currency varchar [not null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    owner 
    (owner, currency) [unique]
  }
}
Table entries {
  id bigserial [pk]
  from_account_id bigint [ref: > A.id, not null]
  to_account_id bigint [ref: > A.id, not null]
  amount bigint [not null, note: 'must be positive']
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    from_account_id 
    to_account_id 
    (from_account_id, to_account_id)
  }
  
}

